--- a/TA Demos/Collections/Collections_Introduction.ipynb
+++ b/TA Demos/Collections/Collections_Introduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,13 @@
     "from typing import Set\n",
     "# from typing import Tuple \n",
     "# from typing import Dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List"
    ]
   },
   {
@@ -58,6 +65,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -80,6 +94,54 @@
     "    Salary: {salary}\n",
     "    \"\"\"\n",
     "    print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = set()\n",
+    "b = set()\n",
+    "for i in range(1, 101):\n",
+    "    a.add(i if i % 3 == 0 else i * i)\n",
+    "    b.add(i if i % 5 == 0 else i % 5)\n",
+    "print(f'a = {a}')\n",
+    "print(f'b = {b}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tuples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ((1,2), (3,4))\n",
+    "b = ((5, 6), (7, 8))\n",
+    "\n",
+    "c = a + b\n",
+    "for index in range(len(c)):\n",
+    "    print(f'Index: c[{index}]: {c[index]}')\n",
+    "\n",
+    "print('-----')\n",
+    "print(f'a = {a}')\n",
+    "print(f'a * 2 = {a * 2}')\n",
+    "print(f'(a * 2).count((1,2)) = {(a * 2).count((1,2))}')"
    ]
   }
  ],
