--- a/TA Demos/Collections/Collections_Introduction.ipynb
+++ b/TA Demos/Collections/Collections_Introduction.ipynb
@@ -9,15 +9,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add imports to add type hinting into our method signatures\n",
     "from typing import List\n",
     "from typing import Set\n",
-    "# from typing import Tuple \n",
-    "# from typing import Dict"
+    "from typing import Tuple \n",
+    "from typing import Dict\n",
+    "from random import randrange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_args(*args) -> float:\n",
+    "    return sum(args)\n",
+    "\n",
+    "\n",
+    "print('----- Tests -----')\n",
+    "print(f'sum_args(1) = {sum_args(1)}')\n",
+    "print(f'sum_args(1, 2, 3, 4, 5) = {sum_args(1, 2, 3, 4, 5)}')\n",
+    "print(f'sum_args() = {sum_args()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_pairs(**kwargs) -> None:\n",
+    "    print('----- Running Test -----')\n",
+    "    for key, pair in kwargs.items():\n",
+    "        print(f'Hit: ({key}, {pair})')\n",
+    "    print('------------------------')\n",
+    "\n",
+    "generate_pairs()\n",
+    "generate_pairs(a = 1, b = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Collection Memory Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [randrange(1, 10) for i in range(5)]\n",
+    "b = a.copy()\n",
+    "\n",
+    "print(f'id(a) = {id(a)}\\nid(b) = {id(b)}\\n')\n",
+    "for i in range(len(a)):\n",
+    "    print(f'a[{i}] = b[{i}] = {a[i]}\\n\\t id(a[{i}]): {id(a[i])}\\n\\t id(b[{i}]): {id(b[i])}')\n",
+    "\n",
+    "print('\\nChanged a[0] to: \\'hello\\'')\n",
+    "a[0] = 'Hello'\n",
+    "# See Difference\n",
+    "print(f'a[0] = {a[0]} with id: {id(a[0])}\\nb[0] = {b[0]} with id: {id(b[0])}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = [randrange(1, 10) for i in range(4)]\n",
+    "d = c \n",
+    "\n",
+    "print(f'c: {c}\\nd: {d}\\n')\n",
+    "\n",
+    "print('\\nChanged c[0]: Incremented\\n')\n",
+    "c[0] += 1\n",
+    "print(f'c[0] = {c[0]} with id: {id(c[0])}\\nd[0] = {d[0]} with id: {id(d[0])}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Constructors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [randrange(0, i + 1) for i in range(25)]\n",
+    "numbers_tuple = tuple(numbers)\n",
+    "numbers_set = set(numbers_tuple)\n",
+    "numbers_list = list(numbers_set)\n",
+    "numbers_dict = dict(zip(numbers_list, [0 for i in range(len(numbers))]))\n",
+    "\n",
+    "print(f'numbers = {numbers}')\n",
+    "print(f'numbers_tuple = {numbers_tuple}')\n",
+    "print(f'numbers_set = {numbers_set}')\n",
+    "print(f'numbers_list = {numbers_list}')\n",
+    "print(f'numbers_dict = {numbers_dict}')"
    ]
   },
   {
